exports[`wordWrap should accept other values 1`] = `
Object {
  "overflowWrap": "break-all",
  "wordBreak": "break-all",
  "wordWrap": "break-all",
}
`;

exports[`wordWrap should default wrap to break-word 1`] = `
Object {
  "overflowWrap": "break-word",
  "wordBreak": "break-all",
  "wordWrap": "break-word",
}
`;
